# models/accessControlModel.js
@@ -48,7 +48,7 @@ const getAuditoryIdAccessesStaff = async (id) => {
     return rows;
 };
 
-const grantAccessByTeacherId = async (id, access) => {
+const grantAccessByTeacherId = async (access) => {
     const {teacher_id, auditory_id, access_start_time, type} = access;
     const query = `INSERT INTO accesscontrol_teacher (teacher_id, auditory_id, access_start_time, type)
                    VALUES ($1, $2, $3, $4)
@@ -57,7 +57,29 @@ const grantAccessByTeacherId = async (id, access) => {
     return rows[0];
 };
 
-const grantAccessByAdminId = async (id, access) => {
+const updateTeacherAccessById = async (id, access) => {
+    const {teacher_id, auditory_id, access_start_time, type} = access;
+    const query = `UPDATE accesscontrol_teacher
+                   SET teacher_id        = coalesce($1, teacher_id),
+                       auditory_id       = coalesce($2, auditory_id),
+                       access_start_time = coalesce($3, access_start_time),
+                       type              = coalesce($4, type)
+                   WHERE id = $5
+                   RETURNING *`;
+    const {rows} = await dbPool.query(query, [teacher_id, auditory_id, access_start_time, type, id]);
+    return rows[0];
+};
+
+const deleteTeacherAccessById = async (id) => {
+    const query = `DELETE
+                   FROM accesscontrol_teacher
+                   WHERE id = $1
+                   RETURNING *`;
+    const {rows} = await dbPool.query(query, [id]);
+    return rows[0];
+};
+
+const grantAccessByAdminId = async (access) => {
     const {admin_id, auditory_id, access_start_time, type} = access;
     const query = `INSERT INTO accesscontrol_admin (admin_id, auditory_id, access_start_time, type)
                    VALUES ($1, $2, $3, $4)
@@ -66,7 +88,29 @@ const grantAccessByAdminId = async (id, access) => {
     return rows[0];
 };
 
-const grantAccessByStaffId = async (id, access) => {
+const updateAdminAccessById = async (id, access) => {
+    const {admin_id, auditory_id, access_start_time, type} = access;
+    const query = `UPDATE accesscontrol_admin
+                   SET admin_id          = coalesce($1, admin_id),
+                       auditory_id       = coalesce($2, auditory_id),
+                       access_start_time = coalesce($3, access_start_time),
+                       type              = coalesce($4, type)
+                   WHERE id = $5
+                   RETURNING *`;
+    const {rows} = await dbPool.query(query, [admin_id, auditory_id, access_start_time, type, id]);
+    return rows[0];
+};
+
+const deleteAdminAccessById = async (id) => {
+    const query = `DELETE
+                   FROM accesscontrol_admin
+                   WHERE id = $1
+                   RETURNING *`;
+    const {rows} = await dbPool.query(query, [id]);
+    return rows[0];
+};
+
+const grantAccessByStaffId = async (access) => {
     const {staff_id, auditory_id, access_start_time, type} = access;
     const query = `INSERT INTO accesscontrol_staff (staff_id, auditory_id, access_start_time, type)
                    VALUES ($1, $2, $3, $4)
@@ -74,6 +118,29 @@ const grantAccessByStaffId = async (id, access) => {
     const {rows} = await dbPool.query(query, [staff_id, auditory_id, access_start_time, type]);
     return rows[0];
 };
+
+const updateStaffAccessById = async (id, access) => {
+    const {staff_id, auditory_id, access_start_time, type} = access;
+    const query = `UPDATE accesscontrol_staff
+                   SET staff_id          = coalesce($1, staff_id),
+                       auditory_id       = coalesce($2, auditory_id),
+                       access_start_time = coalesce($3, access_start_time),
+                       type              = coalesce($4, type)
+                   WHERE id = $5
+                   RETURNING *`;
+    const {rows} = await dbPool.query(query, [staff_id, auditory_id, access_start_time, type, id]);
+    return rows[0];
+};
+
+const deleteStaffAccessById = async (id) => {
+    const query = `DELETE
+                   FROM accesscontrol_staff
+                   WHERE id = $1
+                   RETURNING *`;
+    const {rows} = await dbPool.query(query, [id]);
+    return rows[0];
+};
+
 
 module.exports = {
     getAuditoryAccessesTeachersId,
@@ -84,5 +151,11 @@ module.exports = {
     getAuditoryIdAccessesStaff,
     grantAccessByTeacherId,
     grantAccessByAdminId,
-    grantAccessByStaffId
+    grantAccessByStaffId,
+    updateTeacherAccessById,
+    deleteTeacherAccessById,
+    updateAdminAccessById,
+    deleteAdminAccessById,
+    updateStaffAccessById,
+    deleteStaffAccessById
 };
