# routes/accessControlRoutes.js
@@ -10,7 +10,13 @@ router.get('/auditory-admin/:id', checkRoomsAdmin, accessControlController.getAu
 router.get('/staff-auditory/:id', checkRoomsAdmin, accessControlController.getAuditoryAccessesStaffId);
 router.get('/auditory-staff/:id', checkRoomsAdmin, accessControlController.getAuditoryIdAccessesStaff);
 router.post('/grant-access-teacher', checkRoomsAdmin, accessControlController.grantAccessByTeacherId);
+router.put('/update-access-teacher/:id', checkRoomsAdmin, accessControlController.updateTeacherAccessById);
+router.delete('/delete-access-teacher/:id', checkRoomsAdmin, accessControlController.deleteTeacherAccessById);
 router.post('/grant-access-admin', checkRoomsAdmin, accessControlController.grantAccessByAdminId);
+router.put('/update-access-admin/:id', checkRoomsAdmin, accessControlController.updateAdminAccessById);
+router.delete('/delete-access-admin/:id', checkRoomsAdmin, accessControlController.deleteAdminAccessById);
 router.post('/grant-access-staff', checkRoomsAdmin, accessControlController.grantAccessByStaffId);
+router.put('/update-access-staff/:id', checkRoomsAdmin, accessControlController.updateStaffAccessById);
+router.delete('/delete-access-staff/:id', checkRoomsAdmin, accessControlController.deleteStaffAccessById);
 
 module.exports = router;
